--- a/.github/workflows/amd64_macos_cmake.yml
+++ b/.github/workflows/amd64_macos_cmake.yml
@@ -11,6 +11,7 @@ concurrency:
 env:
   CCACHE_BASEDIR: ${{github.workspace}}
   CCACHE_DIR: ${{github.workspace}}/.ccache
+
 jobs:
   native:
     strategy:
@@ -25,7 +26,7 @@ jobs:
     env:
       deps_src_key: amd64_macos_deps_src
       deps_build_key: amd64_macos_deps_build_${{matrix.cmake.name}}
-      ccache_key: amd64_macos_ccache_${{matrix.cmake.name}}
+      ccache_key: amd64_macos_ccache
     steps:
       - uses: actions/checkout@v5
       - name: Install Dependencies
@@ -80,6 +81,10 @@ jobs:
           --config ${{matrix.cmake.config}}
           --target ${{matrix.cmake.install_target}}
           -v
+      - name: CCache stats and cleanup
+        run: |
+          ccache --show-stats
+          ccache --zero-stats
 
   amd64_macos_cmake:
     runs-on: ubuntu-latest
