--- a/.github/workflows/amd64_linux_cmake.yml
+++ b/.github/workflows/amd64_linux_cmake.yml
@@ -27,7 +27,7 @@ jobs:
     env:
       deps_src_key: amd64_linux_deps_src
       deps_build_key: amd64_linux_deps_build_${{matrix.cmake.name}}
-      ccache_key: amd64_linux_ccache
+      ccache_key: amd64_linux_ccache_${{matrix.cmake.name}}
     steps:
       - uses: actions/checkout@v5
       - name: Install Dependencies
