--- a/cmake/dependencies/CMakeLists.txt
+++ b/cmake/dependencies/CMakeLists.txt
@@ -50,7 +50,7 @@ if(BUILD_absl)
   # subproject. Otherwise the install rules in this project break.
   set(ABSL_ENABLE_INSTALL ON)
   set(ABSL_BUILD_TESTING OFF)
-  set(ABSL_BUILD_TEST_HELPERS ON)
+  set(ABSL_BUILD_TEST_HELPERS OFF)
   set(ABSL_USE_EXTERNAL_GOOGLETEST ON)
   set(ABSL_FIND_GOOGLETEST OFF)
   FetchContent_MakeAvailable(absl)
@@ -93,11 +93,11 @@ if(BUILD_re2)
   FetchContent_Declare(
     re2
     GIT_REPOSITORY "https://github.com/google/re2.git"
-    GIT_TAG "2024-07-02"
+    GIT_TAG "2025-08-12"
     GIT_SHALLOW TRUE
     UPDATE_COMMAND git reset --hard
     PATCH_COMMAND git apply --ignore-whitespace
-    "${CMAKE_CURRENT_LIST_DIR}/../../patches/re2-2024-07-02.patch"
+    "${CMAKE_CURRENT_LIST_DIR}/../../patches/re2-2025-08-12.patch"
   )
   set(RE2_BUILD_TESTING OFF)
   FetchContent_MakeAvailable(re2)
@@ -121,7 +121,7 @@ if(BUILD_googletest)
     "${CMAKE_CURRENT_LIST_DIR}/../../patches/googletest-v1.17.0.patch"
   )
   set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-  set(INSTALL_GTEST ON)
+  set(INSTALL_GTEST OFF)
   set(GTEST_HAS_ABSL ON)
   FetchContent_MakeAvailable(googletest)
   list(POP_BACK CMAKE_MESSAGE_INDENT)
