re2 is needed for protobuf

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,23 +85,21 @@ message(STATUS "Build ZLIB: ${BUILD_ZLIB}")
 option(BUILD_absl "Build the abseil-cpp dependency Library" ON)
 message(STATUS "Build abseil-cpp: ${BUILD_absl}")
 
+option(BUILD_re2 "Build the RE2 dependency Library" ON)
+message(STATUS "Build re2: ${BUILD_re2}")
+
 option(BUILD_Protobuf "Build the Protobuf dependency Library" ON)
 message(STATUS "Build protobuf: ${BUILD_Protobuf}")
 
 if(BUILD_TESTING)
-  option(BUILD_re2 "Build the re2 dependency Library" ON)
-  message(STATUS "Build re2: ${BUILD_re2}")
-
   option(BUILD_googletest "Build googletest" ON)
-  message(STATUS "Build googletest: ${BUILD_googletest}")
-
   option(BUILD_benchmark "Build benchmark" ON)
-  message(STATUS "Build benchmark: ${BUILD_benchmark}")
 else()
-  set(BUILD_re2 OFF)
   set(BUILD_googletest OFF)
   set(BUILD_benchmark OFF)
 endif()
+message(STATUS "Build googletest: ${BUILD_googletest}")
+message(STATUS "Build benchmark: ${BUILD_benchmark}")
 
 # Find system deps
 include(system_deps)
