ci: rework event

--- a/.github/workflows/riscv64_docker_cmake.yml
+++ b/.github/workflows/riscv64_docker_cmake.yml
@@ -1,12 +1,7 @@
 # ref: https://github.com/docker-library/official-images
 name: riscv64 Docker CMake
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-  workflow_dispatch:
+on: [push, pull_request, workflow_dispatch]
 
 concurrency:
   group: ${{github.workflow}}-${{github.ref}}
