--- a/ci/docker/rockylinux/Dockerfile
+++ b/ci/docker/rockylinux/Dockerfile
@@ -6,7 +6,7 @@ FROM rockylinux:9 AS env
 ENV PATH=/usr/local/bin:$PATH
 RUN dnf -y update \
 && dnf -y install git wget openssl-devel cmake \
-&& dnf -y groupinstall "Development Tools" \
+&& dnf -y group install "Development Tools" \
 && dnf clean all \
 && rm -rf /var/cache/dnf
 CMD [ "/usr/bin/bash" ]
@@ -27,7 +27,7 @@ RUN CTEST_OUTPUT_ON_FAILURE=1 cmake --build build --target test -v
 
 # Test install rules
 FROM env AS install_env
-COPY --from=build /usr/local /usr/local/
+COPY --from=build /usr/local/ /usr/local/
 
 FROM install_env AS install_devel
 WORKDIR /home/samples
