--- a/ci/docker/rockylinux/Dockerfile
+++ b/ci/docker/rockylinux/Dockerfile
@@ -1,6 +1,8 @@
 # Create a virtual environment with all tools installed
 # ref: https://hub.docker.com/_/rockylinux
-FROM rockylinux:9 AS env
+# FROM rockylinux:9 AS env
+# ref: https://hub.docker.com/rockylinux/rockylinux
+FROM rockylinux/rockylinux:9 AS env
 
 # Install system build dependencies
 ENV PATH=/usr/local/bin:$PATH
