rework ignore files

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,16 @@
+# Native build
+.cache/
+.vagrant/
 build/
 build*/
-export/
 cache/
+compile_commands.json
+export/
 
-.vagrant/
-/msg.txt
-
-# IDE
-.vs/
-.vscode/
-.cache/
-# Kdevelop
+# Editors
 .kdev4/
 *.kdev4
-# vim
-compile_commands.json
 *.swp
 *.user
+.vs/
+.vscode/
